[gd_scene load_steps=5 format=2]

[ext_resource path="res://resource/my_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/ColorPickerPopup.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/bg.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/SliderBox.tscn" type="PackedScene" id=4]

[node name="ColorPickerPopup" type="WindowDialog"]
visible = true
margin_right = 335.0
margin_bottom = 300.0
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Pick Color"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
hint_text = "Hint"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -9.0
margin_bottom = -9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="VBoxContainer"]
margin_right = 318.0
margin_bottom = 61.0
text = "Hint
"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 318.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 79.0
margin_bottom = 33.0
text = "PREVIEW"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 83.0
margin_right = 318.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 102.0
margin_bottom = 135.0

[node name="G" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 139.0
margin_bottom = 172.0
text = "G"

[node name="B" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 176.0
margin_bottom = 209.0
text = "B"

[node name="A" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 213.0
margin_bottom = 246.0
text = "A"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 250.0
margin_right = 318.0
margin_bottom = 283.0

[node name="Confirm" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 157.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "CONFIRM"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "CANCEL"
[connection signal="value_changed" from="VBoxContainer/R" to="." method="_on_R_value_changed"]
[connection signal="value_changed" from="VBoxContainer/G" to="." method="_on_G_value_changed"]
[connection signal="value_changed" from="VBoxContainer/B" to="." method="_on_B_value_changed"]
[connection signal="value_changed" from="VBoxContainer/A" to="." method="_on_A_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
